--- a/html-work/2/css/mystlye.css
+++ b/html-work/2/css/mystlye.css
@@ -1,5 +1,44 @@
-div {
-  background-color: rgb(130, 173, 243);
-  height: 100px;
-  width: 100px;
+header{
+width: 100%;
+height: 150px;
+background-color: bisque;
+}
+
+ #container{
+width: 1100px;
+/* height: 100px; */
+/* background-color: #888; */
+/*북 동 남 서
+margin: 0 30px 200px 400px;*/
+margin: 0 auto;
+}
+a{
+text-decoration: none;
+}
+
+#logo{
+  /*동서남북*/
+  /*padding: ; */
+  padding-left: 20px;
+}
+.navi{
+  float: right; /*오른쪽으로 붙이기*/
+ }
+li{
+  float: left;
+list-style-type: none;
+}
+li a{
+  display: block;
+  /*상하, 좌우*/
+  padding: 20px 60px;
+}
+
+section{
+  padding: 20px 60px;
+}
+
+footer{
+  height: 60px;
+  background-color: aquamarine;
 }
